src/gatsby-theme-musician/components/release-item.css
.c012 {
  backface-visibility: visible !important;
  position: relative !important;
  transition: all 0.5s;
  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.7);
}
.c015 .c012 {
  filter: brightness(30%) blur(3px);
}
.c013 {
  width: 100% !important;
  z-index: 1000;
}
.backCover {
  margin-top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

